WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33090
AX: any DIV with an aria role should not be ignored
https://bugs.webkit.org/show_bug.cgi?id=33090
Summary
AX: any DIV with an aria role should not be ignored
chris fleizach
Reported
2009-12-31 19:37:12 PST
a DIV with an aria role should not be ignored by accessibility
Attachments
patch
(4.22 KB, patch)
2009-12-31 20:59 PST
,
chris fleizach
darin
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2009-12-31 20:59:50 PST
Created
attachment 45727
[details]
patch
WebKit Review Bot
Comment 2
2009-12-31 21:01:40 PST
style-queue ran check-webkit-style on
attachment 45727
[details]
without any errors.
WebKit Commit Bot
Comment 3
2010-01-04 10:15:18 PST
Comment on
attachment 45727
[details]
patch Rejecting patch 45727 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--exit-after-n-failures=1', '--quiet']" exit_code: 1 Running build-dumprendertree Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Testing 11862 test cases. svg/W3C-SVG-1.1/animate-elem-30-t.svg -> crashed Exiting early after 1 failures. 9854 tests run. 475.20s total testing time 9853 test cases (99%) succeeded 1 test case (<1%) crashed 7 test cases (<1%) had stderr output Full output:
http://webkit-commit-queue.appspot.com/results/161591
chris fleizach
Comment 4
2010-01-04 10:17:31 PST
seems unlikely this patch was the culprit svg/W3C-SVG-1.1/animate-elem-30-t.svg -> crashed
chris fleizach
Comment 5
2010-01-04 10:55:19 PST
http://trac.webkit.org/changeset/52748
Eric Seidel (no email)
Comment 6
2010-01-04 13:14:51 PST
Looks like
http://trac.webkit.org/changeset/52746
had landed and the bots were behind. Due to
bug 30098
we didn't notice the bots were behind when running the commit-queue. I'll move
bug 30098
further up my priority list. :( Sorry for the trouble.
Adam Barth
Comment 7
2010-01-04 14:47:01 PST
> I'll move
bug 30098
further up my priority list. :(
I just posted a patch to fix that bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug