AX: any DIV with an aria role should not be ignored https://bugs.webkit.org/show_bug.cgi?id=33090

Reviewed by Darin Adler.

WebCore:

Test: platform/mac/accessibility/aria-divs-not-ignored.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::accessibilityIsIgnored):

LayoutTests:

* platform/mac/accessibility/aria-divs-not-ignored-expected.txt: Added.
* platform/mac/accessibility/aria-divs-not-ignored.html: Added.



Canonical link: https://commits.webkit.org/44161@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52748 268f45cc-cd09-0410-ab3c-d52691b4dbfc